@@ -10,8 +10,11 @@ desktop_files=[	("share/applications",
 		) 
 	      ]
 xml_files=[ ("share/app-install/desktop", 
-	     ("data/software-center.menu.in",)
-	    )
+	     ("data/software-center.menu.in", )
+            ),
+	    ("share/app-install/menu.d/",	
+	     ("data/featured.menu.in",)
+	    ),
 	  ]
 
 #schemas_files=[
